[gd_scene load_steps=3 format=3 uid="uid://b715lkrehpwd0"]

[ext_resource type="Script" uid="uid://cng8ywhpv22xn" path="res://Title.gd" id="1_y7k74"]
[ext_resource type="FontFile" uid="uid://6ybbtdjigu8h" path="res://fonts/m6x11.ttf" id="2_oyqm6"]

[node name="Title" type="Node2D"]
script = ExtResource("1_y7k74")

[node name="Center" type="Node2D" parent="."]
position = Vector2(-88, -128)

[node name="Bar1" type="Node2D" parent="Center"]

[node name="SignPolygon" type="Polygon2D" parent="Center/Bar1"]
position = Vector2(-96, 0)
scale = Vector2(320, 80)
skew = -0.261799
color = Color(0.462745, 0.258824, 0.541176, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="Shadow" type="Polygon2D" parent="Center/Bar1/SignPolygon"]
z_index = -1
position = Vector2(0.0220994, 0.0767634)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="RichTextLabel" type="RichTextLabel" parent="Center/Bar1"]
offset_left = -72.0
offset_right = 224.0
offset_bottom = 80.0
theme_override_fonts/normal_font = ExtResource("2_oyqm6")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[wave]Spit"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Bar2" type="Node2D" parent="Center"]

[node name="SignPolygon2" type="Polygon2D" parent="Center/Bar2"]
position = Vector2(-32, 96)
scale = Vector2(256, 64)
skew = 0.261799
color = Color(0.984314, 0.94902, 0.211765, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="Shadow" type="Polygon2D" parent="Center/Bar2/SignPolygon2"]
z_index = -1
position = Vector2(0.0220994, 0.0767634)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="RichTextLabel2" type="RichTextLabel" parent="Center/Bar2"]
offset_left = -56.0
offset_top = 100.0
offset_right = 240.0
offset_bottom = 164.0
theme_override_fonts/normal_font = ExtResource("2_oyqm6")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[wave]and"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Bar3" type="Node2D" parent="Center"]

[node name="SignPolygon3" type="Polygon2D" parent="Center/Bar3"]
position = Vector2(-80, 176)
scale = Vector2(320, 80)
skew = -0.261799
color = Color(0.462745, 0.258824, 0.541176, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="Shadow" type="Polygon2D" parent="Center/Bar3/SignPolygon3"]
z_index = -1
position = Vector2(0.0220994, 0.0767634)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.78558, 1, 0, 1)
uv = PackedVector2Array(69.973, 75.093, 208.213, 88.7463, 150.186, 182.613, 59.733, 162.133)

[node name="RichTextLabel3" type="RichTextLabel" parent="Center/Bar3"]
offset_left = -56.0
offset_top = 180.0
offset_right = 240.0
offset_bottom = 252.0
theme_override_fonts/normal_font = ExtResource("2_oyqm6")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[wave]Spell"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Container" type="Container" parent="Center"]
offset_left = -96.0
offset_top = -4.0
offset_right = 272.0
offset_bottom = 260.0
